# SpreedSQL

./: .gitignore  LICENSE  README.md  pyproject.toml
spreed_sql/: __init__.py  apps_script.py  builder.py  models.py  validator.py
