[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreed-sql"
version = "0.1.0"
description = "SQL-like declarative schema definitions for Google Sheets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kynto Team"},
]
keywords = ["google-sheets", "spreadsheet", "schema", "gspread", "declarative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "pydantic>=2.0",
    "gspread>=5.0",
    "google-auth>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/ArubikU/SpreedSQL"
Repository = "https://github.com/ArubikU/SpreedSQL"

[tool.setuptools.packages.find]
where = ["."]
include = ["spreed_sql*"]
